--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" style="position: fixed">
+<!--<mat-toolbar color="primary" style="position: fixed">
 <header>
     <ul>
         <li><a  mat-button color="basic" [routerLink]="['/sobre-mi']" [routerLinkActive]="['actived']">Sobre mi</a></li>
@@ -14,5 +14,8 @@
     <router-outlet></router-outlet>
 </section>
 <footer>
-    Master en javaScript
+  <p>Master en javaScript</p>  
 </footer>
+  -->
+
+<app-menu></app-menu>
