--- a/src/app/conponents/create/create.component.html
+++ b/src/app/conponents/create/create.component.html
@@ -1,82 +1,43 @@
-<div class="container">
-  <h2>{{title}}</h2>
-  <div class="marquee-container">
-  <p class="marquee-text">{{project.usuario}}</p>
- </div>
-
- <form  [formGroup]="myForm" class="col-sm-12 mt-4 needs-validation" (submit)="onSubmit(myForm)"  novalidate>
-
-  <div class="row mb-3">
-    <label for="validationCustom01"class="col-sm-3 ">Usuario</label>
-    <!-- name="usuario" #usuario [(ngModel)]="project.usuario" -->
-    <input formControlName="usuario" type="text" class="form-control"  required> 
-    <div class="valid-feedback">
-      Usuario Correcto!
-    </div>
-    <div class="invalid-feedback">
-      Porfavor introduce tu  Usuario 
-    </div>
+<form [formGroup]="myForm" (submit)="onSubmit(myForm)"  >
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Titulo</label>
+    <input  formControlName="nombre" type="text" class="form-control">
   </div>
-
-  <div class="row mb-3">
-    <label for="inputPassword3" class="col-sm-3">Password</label>
-      <input formControlName="password" style="width: 310px;" type="password" class="form-control"  required>
-    <div class="valid-feedback">
-        passtword Correcto!
-    </div>
-    <div class="invalid-feedback">
-      Porfavor introduce tu passtword
-    </div>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Descripción</label>
+    <input  formControlName="descripcion" type="text" class="form-control">
   </div>
-
-  <div class="row mb-3">
-    <legend class="col-form-label col-sm-2 pt-0">Pokemon</legend>
-    <div id="padre" class="col-sm-10">
-      <div id="miFormulario" class="form-check"  *ngFor="let item of pokedex" >
-        <input  formControlName="chekpokemon" [checked]="item.checked" class="form-check-input" type="radio"  value="{{item.poke}}" name="radiopokes" required>
-        <label class="form-check-label" >
-          {{item.poke}}
-          <img  id="Pokemon"  src={{item.img}} >
-        </label>
-      </div>
-   
-    </div>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Categoria</label>
+    <input formControlName="categoria" type="text" class="form-control">
   </div>
-
-  <div class="row mb-3">
-    <div class="col-sm-10 offset-sm-2">
-      <div class="form-check">
-          <input formControlName="condiciones" class="form-check-input" type="checkbox" required>
-          <label class="form-check-label" >
-            Terminos y condiciones
-          </label>
-          <div class="invalid-feedback" >
-            Debes aceptar nuestros Terminos y condiciones
-          </div>
-        </div>
-    </div>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Precio</label>
+    <input formControlName="precio" type="number" class="form-control">
   </div>
-  <div>
-    <label for="image">Foto</label>
-    <input class="form-control" type="file"formControlName="foto" required="">
-    <div class="invalid-feedback" >
-      Debes subir una foto
-    </div>
+  
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Stock</label>
+    <input formControlName="stock" type="number" class="form-control">
   </div>
-  <button mat-raised-button  color="primary"  type="submit">enviar</button>
-  </form> 
-
-  <pre>
-    {{myForm.value | json}}
-  </pre>
-
-  <!-- Modal -->
-  <div id="modal" class="modal fade show" *ngIf="status==true">
-    <div id="body-modal" >
-      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="close_modal()"></button>
-      <p >proyecto Guardado con exito</p>
-      <img id="img-chek" src="https://i.gifer.com/origin/11/1184b4c0aa977f925dde58d2075772dd.gif">
-    </div>
+  
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">fabricante</label>
+    <input formControlName="fabricante" type="text" class="form-control">
   </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 
+</form>
+
+
+<div *ngFor="let comp of computers" class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">{{comp.nombre}}</h5>
+    <p class="card-text">{{comp.descripcion}}</p>
+    <p class="card-text">{{comp.precio}}</p>
+    <p class="card-text">{{comp.categoria}}</p>
+    <p class="card-text">{{comp.fabricante}}</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
 </div>
