--- a/src/app/conponents/create/create.component.html
+++ b/src/app/conponents/create/create.component.html
@@ -29,7 +29,8 @@
 
 </form>
 
-
+<app-list></app-list>
+<!--
 <div *ngFor="let comp of computers" class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
@@ -39,5 +40,8 @@
     <p class="card-text">{{comp.categoria}}</p>
     <p class="card-text">{{comp.fabricante}}</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a class="btn btn-danger" (click)="deleteProjectId(comp.id)">Eliminar</a>
   </div>
 </div>
+-->
+
