--- a/src/app/conponents/create/create.component.html
+++ b/src/app/conponents/create/create.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="myForm" (submit)="onSubmit(myForm)"  >
+  <input type="hidden" formControlName="id">
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Titulo</label>
     <input  formControlName="nombre" type="text" class="form-control">
@@ -29,7 +30,6 @@
 
 </form>
 
-<app-list></app-list>
 <!--
 <div *ngFor="let comp of computers" class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
@@ -44,4 +44,22 @@
   </div>
 </div>
 -->
+<div>
+  <input type="number"  [(ngModel)]="id" (input)="getProducts()" placeholder="Enter product ID">
+ <!--<button (click)="getProducts()">Search</button>--> 
+</div>
+
+
+<div  *ngFor="let comp of computers" class="card" style="width: 18rem; margin-bottom: 20px;">
+  <div class="card-body">
+    <p class="card-text d-none" >{{comp.id}}</p>
+    <h5 class="card-title">{{comp.nombre}}</h5>
+    <p class="card-text">{{comp.descripcion}}</p>
+    <p class="card-text">{{comp.precio}}</p>
+    <p class="card-text">{{comp.categoria}}</p>
+    <p class="card-text">{{comp.fabricante}}</p>
+    <a href="#" class="btn btn-warning" (click)="updateForm(comp)">Actulizar</a>
+    <a class="btn btn-danger" (click)="deleteProjectId(comp.id)">Eliminar</a>
+  </div>
+</div>
 
